--- a/cop_exercises.ipynb
+++ b/cop_exercises.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
       "Fizz\n",
       "13\n",
       "14\n",
-      "Fizz\n",
+      "FizzBuzz\n",
       "16\n",
       "17\n",
       "Fizz\n",
@@ -48,7 +48,7 @@
       "Fizz\n",
       "28\n",
       "29\n",
-      "Fizz\n",
+      "FizzBuzz\n",
       "31\n",
       "32\n",
       "Fizz\n",
@@ -63,7 +63,7 @@
       "Fizz\n",
       "43\n",
       "44\n",
-      "Fizz\n",
+      "FizzBuzz\n",
       "46\n",
       "47\n",
       "Fizz\n",
@@ -78,7 +78,7 @@
       "Fizz\n",
       "58\n",
       "59\n",
-      "Fizz\n",
+      "FizzBuzz\n",
       "61\n",
       "62\n",
       "Fizz\n",
@@ -93,7 +93,7 @@
       "Fizz\n",
       "73\n",
       "74\n",
-      "Fizz\n",
+      "FizzBuzz\n",
       "76\n",
       "77\n",
       "Fizz\n",
@@ -108,7 +108,7 @@
       "Fizz\n",
       "88\n",
       "89\n",
-      "Fizz\n",
+      "FizzBuzz\n",
       "91\n",
       "92\n",
       "Fizz\n",
@@ -124,7 +124,9 @@
    ],
    "source": [
     "for i in range(1,101):\n",
-    "    if i % 3 == 0:\n",
+    "    if i % 3 == 0 and i % 5 == 0:\n",
+    "        print('FizzBuzz')\n",
+    "    elif i % 3 == 0:\n",
     "        print('Fizz')\n",
     "    elif i % 5 == 0:\n",
     "        print('Buzz')\n",
